<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00000000"
    android:orientation="vertical"
    android:gravity="center">
    <RelativeLayout
        android:layout_width="280dp"
        android:layout_height="128dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@color/ainemo_white">
        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:layout_above="@+id/btn_layout"
            android:text="@string/update_apk_notice_str"/>
        <LinearLayout
            android:id="@+id/btn_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_alignParentBottom="true">
            <Button
                android:id="@+id/update_apk_cancle"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:background="@drawable/bg_update_apk_dialog_cancle_btn"
                android:layout_weight="1"
                android:text="@string/update_apk_cancle_str"
                android:visibility="visible"/>
            <Button
                android:id="@+id/update_apk_confirm"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/bg_update_apk_dialog_confirm_btn"
                android:layout_weight="1"
                android:text="@string/update_apk_confirm_str"/>

        </LinearLayout>
    </RelativeLayout>



</LinearLayout>