<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/zysp_gray_bg_color"
    tools:context=".activity.MyCloudMeetingActivity">

    <com.zyzxsp.view.HeaderTitleView
        android:id="@+id/my_cloud_meet_header_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@mipmap/icon_bg_title"
        app:headerCenterTitle="@string/title_str_my_cloud_meet"
        app:headerLeftDrawbleVisibility="visiable"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"></com.zyzxsp.view.HeaderTitleView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_cloud_meet_header_view">

        <RelativeLayout
            android:id="@+id/meet_layout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/ainemo_white"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/meet_name_str"
                android:textColor="@color/zysp_gray_color"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/meet_name_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"
                android:text="1111"
                android:textColor="@color/zysp_black_color"
                android:textSize="13sp" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/ainemo_white">

            <View style="@style/division_line_style"></View>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/meet_number_layout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/ainemo_white"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/meet_number_str"
                android:textColor="@color/zysp_gray_color"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/meet_number_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"
                android:text="1111"
                android:textColor="@color/zysp_black_color"
                android:textSize="13sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/meet_capacity_layout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@color/ainemo_white"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/meet_capacity_str"
                android:textColor="@color/zysp_gray_color"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/meet_capacity_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"
                android:text="1111"
                android:textColor="@color/zysp_black_color"
                android:textSize="13sp" />

        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/meet_password_layout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@color/ainemo_white"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/meet_password_str"
                android:textColor="@color/zysp_gray_color"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/meet_password_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"
                android:text="1111"
                android:textColor="@color/zysp_black_color"
                android:textSize="13sp" />

        </RelativeLayout>
    </LinearLayout>


</android.support.constraint.ConstraintLayout>