<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#60E5E8E9"
    android:orientation="vertical">

    <com.zyzxsp.view.HeaderTitleView
        android:id="@+id/meet_header_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@mipmap/icon_bg_title"
        app:headerCenterTitle="@string/title_str_meet"
        app:headerLeftDrawbleVisibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"></com.zyzxsp.view.HeaderTitleView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@android:color/white"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:src="@mipmap/meeting_input" />

        <EditText
            android:inputType="number"
            android:id="@+id/input_meet_number"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/input_meet_number"
            android:textSize="12sp" />
    </LinearLayout>

    <Button
        android:id="@+id/join_meet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/bg_join_meet"
        android:text="加入会议"
        android:textColor="@android:color/white" />

    <LinearLayout
        android:id="@+id/meet_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@android:color/white"
        android:orientation="horizontal"
        android:padding="20dp">

        <LinearLayout

            android:id="@+id/close_camera_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/close_camera"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:button="@drawable/bg_radio_button"
                android:checked="false"
                android:clickable="true" />

            <TextView
                android:id="@+id/jion_meet_close_camera_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/injion_meet_close_camera" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/join_meet_close_voice_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/close_voice"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:button="@drawable/bg_radio_button"
                android:checked="false"
                android:clickable="true" />

            <TextView
                android:id="@+id/close_voice_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/injion_meet_close_voice"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/join_meet" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>