<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/zysp_gray_bg_color"
    tools:context=".activity.UserInfoActivity">

    <com.zyzxsp.view.HeaderTitleView
        android:id="@+id/userinfo_header_view"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/nemo_green"
        app:headerCenterTitle="@string/user_info_title"
        app:headerLeftDrawbleVisibility="visiable"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"></com.zyzxsp.view.HeaderTitleView>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/ainemo_white"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userinfo_header_view">

        <RelativeLayout
            android:id="@+id/name_layout"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/user_name_str_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp"
                android:text="@string/user_info_name_str"
                android:textColor="@color/zysp_gray_color"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/user_name_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="11111"
                android:textColor="@color/zysp_black_color"
                android:textSize="13sp" />
        </RelativeLayout>

        <View
            android:id="@+id/view_line1"
            style="@style/division_line_style"
            app:layout_constraintTop_toBottomOf="@+id/name_layout"></View>

        <RelativeLayout
            android:id="@+id/user_account_layout"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_line1">

            <TextView
                android:id="@+id/user_account_str_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/user_info_account_str"
                android:textColor="@color/zysp_gray_color"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/user_account_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="222"
                android:textColor="@color/zysp_black_color"
                android:textSize="13sp" />
        </RelativeLayout>


        <View
            android:id="@+id/view_line2"
            style="@style/division_line_style"
            app:layout_constraintTop_toBottomOf="@+id/user_account_layout"></View>

        <RelativeLayout
            android:id="@+id/user_mailbox_layout"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_line2">

            <TextView
                android:id="@+id/user_mailbox_str_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp"
                android:text="@string/user_info_mailbox_str"
                android:textColor="@color/zysp_gray_color"
                android:textSize="12sp"
                app:layout_constraintLeft_toLeftOf="parent" />


            <TextView
                android:id="@+id/user_mailbox_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginBottom="15dp"
                android:text="222"
                android:textColor="@color/zysp_black_color"
                android:textSize="13sp" />
        </RelativeLayout>

        <View
            android:id="@+id/view_line3"
            style="@style/division_line_style"
            app:layout_constraintTop_toBottomOf="@+id/user_mailbox_layout"></View>

        <View
            android:id="@+id/view_margin"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@color/zysp_gray_bg_color"
            app:layout_constraintTop_toBottomOf="@+id/view_line3">

        </View>

        <RelativeLayout
            android:id="@+id/modify_password_layout"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            app:layout_constraintTop_toBottomOf="@+id/view_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/user_info_modify_password_str"
                android:textColor="@color/zysp_black_color"
                android:textSize="14sp" />

            <ImageView
                android:layout_width="7dp"
                android:layout_height="11dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="15dp"
                android:src="@mipmap/icon_right_gray" />
        </RelativeLayout>

        <View
            android:id="@+id/view_line4"
            style="@style/division_line_style"
            app:layout_constraintTop_toBottomOf="@+id/modify_password_layout"></View>

        <RelativeLayout
            android:id="@+id/login_out"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            app:layout_constraintTop_toBottomOf="@+id/view_line4">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/user_info_loginout_str"
                android:textColor="@color/zysp_text_red_color"
                android:textSize="14sp" />

            <ImageView
                android:layout_width="7dp"
                android:layout_height="11dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="15dp"
                android:src="@mipmap/icon_right_gray" />
        </RelativeLayout>
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>